// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gen.integer().between(-10, -1) 1`] = `
"-4 (c = 33.33333333333333)
..-1 (c = 0)
..-2 (c = 11.11111111111111)
..-3 (c = 22.22222222222222)"
`;

exports[`Gen.integer().between(0, 10): 0 1`] = `
"2 (c = 20)
..0 (c = 0)
..1 (c = 10)"
`;

exports[`Gen.integer().between(0, 10): 1 1`] = `
"1 (c = 10)
..0 (c = 0)"
`;

exports[`Gen.integer().between(0, 10): 2 1`] = `"0 (c = 0)"`;

exports[`Gen.integer().between(0, 10): 3 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....1 (c = 10)
..3 (c = 30)
....1 (c = 10)"
`;

exports[`Gen.integer().between(0, 10): 4 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....1 (c = 10)
..3 (c = 30)
....1 (c = 10)"
`;

exports[`Gen.integer().between(0, 10): 5 1`] = `
"5 (c = 50)
..0 (c = 0)
..2 (c = 20)
....1 (c = 10)
..3 (c = 30)
....1 (c = 10)
..4 (c = 40)"
`;

exports[`Gen.integer().between(0, 10): 6 1`] = `
"2 (c = 20)
..0 (c = 0)
..1 (c = 10)"
`;

exports[`Gen.integer().between(0, 10): 7 1`] = `
"3 (c = 30)
..0 (c = 0)
..1 (c = 10)
..2 (c = 20)"
`;

exports[`Gen.integer().between(0, 10): 8 1`] = `
"3 (c = 30)
..0 (c = 0)
..1 (c = 10)
..2 (c = 20)"
`;

exports[`Gen.integer().between(0, 10): 9 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....1 (c = 10)
..3 (c = 30)
....1 (c = 10)"
`;

exports[`Gen.integer().between(0, 10): 10 1`] = `
"5 (c = 50)
..0 (c = 0)
..2 (c = 20)
....1 (c = 10)
..3 (c = 30)
....1 (c = 10)
..4 (c = 40)"
`;

exports[`Gen.integer().between(1, 10) 1`] = `
"3 (c = 22.22222222222222)
..1 (c = 0)
..2 (c = 11.11111111111111)"
`;
